--- a/css/custom.css
+++ b/css/custom.css
@@ -49,7 +49,12 @@ h1{
   -o-transform: scale(1.2);
 }
 /*seccion 03*/
-
+#page03 h5{
+  color:#837390;
+}
+.title-3{
+  color:#837390
+}
 
 /*seccion 04*/
 #page4{
@@ -58,7 +63,7 @@ h1{
 .sec04{  
 	  text-align: center;
 }
-.title-3{
+.title-4{
 	color:#fff;
 }
 .snip1580 {
@@ -155,7 +160,10 @@ h1{
 .title-6{
 	color:#E4C3C3;
 }
-
+ .mail{
+  color:#837390;
+  text-align: center;
+ }
 
 
 
