--- a/css/custom.css
+++ b/css/custom.css
@@ -7,8 +7,8 @@
 	/*font-family: 'Montserrat', sans-serif;
 	font-family: 'Open Sans', sans-serif;*/
 }
-.logo_lila{
-	width: 100%;
+.logo_lilac{
+	width: 40%;
 }
 h1{
 	display: none;
@@ -66,7 +66,7 @@ h1{
   color:#837390;
 }
 .title-3{
-  color:#837390
+  color:#837390;
 }
 
 /*seccion 04*/
@@ -167,10 +167,15 @@ h1{
 
 /*seccion 06*/
 
-#E4C3C3
-.credito p{
-	font-size: 10px;
-	color: #E6E6E6;
+
+.credito-a p{
+	font-size: 12px;
+	color: #837390;
+}
+
+.credito-b p{
+  font-size: 10px;
+  color: #E6E6E6;
 }
 
 .title-6{
