--- a/css/style.default.css
+++ b/css/style.default.css
@@ -174,7 +174,7 @@ p.social a.email {
 }
 #page1 {
   text-align: center;
-  background: url('../img/demo.jpg') center center no-repeat;
+  background: url('../img/portfolio_bg.png') center center no-repeat;
   background-size: cover;
   color: #fff;
 }
